# organizer

./: .dockerignore  .env.example  .gitignore  CLAUDE.md  Dockerfile  README.md  compose.yaml  nginx.conf  run.bat  supervisord.conf
.devcontainer/: devcontainer.json
.github/workflows/: be-ci.yml  docker.yml  fe-ci.yml  scripts-ci.yml
be/: Dockerfile  Dockerfile.dev  cli.py  comicfile.py  comicfile_test.py  db.py  global_data.py  loader.py  main.py  model.py  pyproject.toml  ruff.toml  util.py
be/api/: auth.py  comicpage.py  comics.py  images.py  system.py  videos.py
be/core/: auth.py  exceptions.py  lifespan.py  openapi.py  scan_progress.py
be/schemas/: comic.py  common.py  image.py
be/tasks/: backup.py  cache.py  cleanup.py  scan.py
be/tests/: comicfile_test.py  conftest.py  test_api_auth.py  test_api_comicpage.py  test_api_comics.py  test_api_images.py  test_api_system.py  test_api_videos.py  test_loader.py  test_misc.py  test_model.py  test_scan_progress.py  test_tasks.py  test_util.py
fe/: .eslintrc.cjs  .prettierignore  Dockerfile.dev  openapi-ts.config.ts  package-lock.json  package.json  vite.config.ts
fe/.husky/: pre-commit
fe/src/: app.d.ts  app.html  app.js  index.test.ts
fe/src/lib/: auth.svelte.ts  config.svelte.ts  config.ts  connection.svelte.ts  folderTree.test.ts  folderTree.ts  mediaStore.test.ts  mediaStore.ts  mock-parity.test.ts  mock.ts  model.svelte.ts  model.ts  (+6 more)
fe/static/: manifest.webmanifest  mockServiceWorker.js  sw.js
nginx/: nginx.conf  nginx.prod.conf
scripts/: decrypt_archives.py  test_decrypt_archives.py
(+39 files in other folders)
