[project]
name = "be"
version = "0.0.1"
dependencies = [
    "cachetools>=5.5.0",
    "fastapi[standard]>=0.115.6",
    "fastapi-utils>=0.8.0",
    "pillow>=11.0.0",
    "rarfile>=4.2",
    "rich>=13.9.4",
    "sqlmodel>=0.0.22",
    "typing-inspect>=0.9.0",
]
requires-python = ">=3.12"

[dependency-groups]
dev = [
    "ruff>=0.8.4",
]
